<resources>
    <string name="app_name">NOG_Android</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="enter_user_name">Enter UserName</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_phone_number">Enter Phone Number</string>
    <string name="upload_profile_image">Upload Profile Image</string>
    <string name="log_in">Log In</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up!</string>
    <string name="already_have_an_account_log_in">Already have an account? Log in!</string>
    <string name="add_category">Add Category</string>
    <string name="edit_category">Edit Category</string>
    <string name="delete_category">Delete Category</string>
    <string name="delete_movie">Delete Movie</string>
    <string name="update_movie">Update Movie</string>
    <string name="add_movie">Add Movie</string>
    <string name="enter_category_name">Enter Category Name</string>
    <string name="promoted">Promoted?</string>
    <string name="enter_category_id">Enter Category Id</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="enter_movie_title">Enter Movie Title</string>
    <string name="enter_release_date">Enter Release Date</string>
    <string name="upload_movie_image">Upload Movie Image</string>
    <string name="enter_movie_id">Enter Movie Id</string>
    <string name="delete">Delete</string>
    <string name="upload_film">Upload Film</string>
    <string name="enter_category">Enter category</string>
    <string name="tab_layout_for_manager_forms_contains_multiple_tabs_to_navigate_between_options">Tab layout for manager forms, contains multiple tabs to navigate between options.</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="release_date">Release Date: %1$s</string>
    <string name="no_movies_found">Not Found Any Related Movies</string>
    <string name="app_logo">App Logo</string>
    <string name="logo">Logo</string>
    <string name="sign_in">Sign In</string>
    <string name="WELCOME">WELCOME TO NOG\nUnlimited movies,\nTV shows, and more</string>
    <string name="get_started">Get Started</string>
    <string name="play_movie">Play Movie</string>
    <string name="movie_image_description">Movie poster</string>
    <string name="project_logo">Project Logo</string>
    <string name="welcome_to_nog">Welcome to NOG</string>
    <string name="categories">Categories</string>
    <string name="home">Home</string>
    <string name="manager">Manager</string>
    <string name="search">Search</string>
    <string name="no_movies_to_display">No movies to display</string>
    <string name="log_out">Log Out</string>
    <string name="change_view_mode">Change View Mode</string>
    <string name="profile_image">profile image</string>
</resources>