<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity"
    android:background="@drawable/background">

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/formHeading"
            android:layout_width="wrap_content"
            android:text="@string/sign_up" />

        <EditText
            android:id="@+id/userName"
            style="@style/signUpForm"
            android:autofillHints="username"
            android:hint="@string/enter_user_name" />

        <EditText
            android:id="@+id/email"
            style="@style/signUpForm"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/password"
            style="@style/signUpForm"
            android:autofillHints="emailAddress"
            android:hint="@string/enter_password"
            android:inputType="textPassword" />

        <EditText
            android:id="@+id/phone"
            style="@style/signUpForm"
            android:autofillHints="phone"
            android:hint="@string/enter_phone_number"
            android:inputType="phone" />

        <Button
            android:id="@+id/uploadProfileImage"
            style="@style/uploadButton"
            android:layout_width="wrap_content"
            android:drawableLeft="@drawable/ic_camara"
            android:text="@string/upload_profile_image"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/submit"
            style="@style/formButton"
            android:layout_width="wrap_content"
            android:text="@string/submit" />
    </LinearLayout>

    <Button
        android:id="@+id/toLogInBtn"
        style="@style/formButton"
        android:layout_width="wrap_content"
        android:text="@string/already_have_an_account_log_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

</androidx.constraintlayout.widget.ConstraintLayout>