<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/managerFormHeading"
            android:layout_width="wrap_content"
            android:text="@string/update_movie" />
        <EditText
            android:id="@+id/movieId"
            style="@style/signUpForm"
            android:autofillHints="text"
            android:hint="@string/enter_movie_id" />

        <EditText
            android:id="@+id/movieTitle"
            style="@style/signUpForm"
            android:autofillHints="text"
            android:hint="@string/enter_movie_title" />
        <EditText
            android:id="@+id/movieRelease"
            style="@style/signUpForm"
            android:autofillHints="Date"
            android:hint="@string/enter_release_date" />
        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <EditText
                android:id="@+id/categoryInput"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autofillHints="text"
                android:hint="@string/enter_category"
                android:inputType="text"
                android:minHeight="48dp"
                android:textColorHint="@color/textOnEmpty"/>

            <Button
                android:id="@+id/addCategoryButton"
                android:layout_width="wrap_content"
                android:backgroundTint="@color/cream"
                android:textColor="@color/black"
                android:layout_height="wrap_content"
                android:text="@string/add_category"/>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/chipGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"/>
        </LinearLayout>

        <Button
            android:id="@+id/movieImage"
            style="@style/uploadButton"
            android:layout_width="wrap_content"
            android:drawableLeft="@drawable/ic_camara"
            android:text="@string/upload_movie_image"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/Film"
            style="@style/uploadButton"
            android:layout_width="wrap_content"
            android:drawableLeft="@drawable/ic_mp4"
            android:text="@string/upload_film"
            tools:ignore="RtlHardcoded" />


        <Button
            android:id="@+id/submit"
            style="@style/formButton"
            android:layout_width="wrap_content"
            android:text="@string/update" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>